# mcp-csu

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  server.py
mcp_csu/: __init__.py  __main__.py  server.py
