[project]
name = "mcp-csu"
version = "0.1.0"
description = "MCP server for Czech Statistical Office (ČSÚ) DataStat API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Reload dev s.r.o." }]
keywords = ["mcp", "czech", "statistics", "czso", "csu", "datastat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-csu = "mcp_csu.server:main"

[project.urls]
Homepage = "https://github.com/reloadcz/mcp-csu"
Repository = "https://github.com/reloadcz/mcp-csu"
Issues = "https://github.com/reloadcz/mcp-csu/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
